--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,8 +5,8 @@ description = "Professional quantitative trading platform for OKX cryptocurrency
 authors = ["EA OKX Quant Team"]
 license = "MIT"
 repository = "https://github.com/okx/ea-okx-quant"
-edition = "2021"
-rust-version = "1.75.0"
+edition = "2024"
+
 
 [workspace]
 
@@ -17,14 +17,14 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.2.0", features = [] }
+tauri-build = { version = "2.5.2", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.5.0", features = ["tray-icon"] }
-tauri-plugin-log = "2.0.0-rc"
+tauri = { version = "2.9.3", features = ["tray-icon"] }
+tauri-plugin-log = "2.7.1"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
