--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,3 +31,5 @@ chrono = { version = "0.4", features = ["serde"] }
 rust_decimal = { version = "1.33", features = ["serde"] }
 uuid = { version = "1.6", features = ["v4"] }
 data = { package = "ea-okx-data", path = "../crates/data" }
+ea_okx_core = { package = "ea-okx-core", path = "../crates/core" }
+rand = "0.8"
